# personal_note_taker

./: .env.example  .gitignore  CHANGES_SUMMARY.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  hourly_digests.csv  journal.db  journal.db-shm  journal.db-wal  journal.db.bad  journal.db.old  main.py  pyproject.toml  recorder.py  segments.csv  test_recorder.py  test_ui.sh
.github/workflows/: ci.yml
migrations/: env.py  migrate_data.py
migrations/versions/: 001_initial.py  002_fts5.py  003_failed_segments.py  004_embeddings.py  005_daily_digest_timestamps.py
recorder/: __init__.py  config.py  logging_config.py  metrics.py
recorder/api/: app.py  middleware.py  sse.py
recorder/api/routes/: audio.py  export.py  health.py  recordings.py  segments.py  summaries.py
recorder/audio/: capture.py  denoiser.py  segmenter.py
recorder/db/: models.py  repository.py  session.py
recorder/embeddings/: backfill.py  client.py
recorder/llm/: client.py  prompts.py
recorder/pipeline/: __init__.py  hourly.py  processor.py
recorder/storage/: __init__.py  audio_store.py
recorder/templates/: index.html
recorder/transcription/: cloud.py  whisper_asr.py
scripts/: dump_from_segments.sql
tests/: conftest.py  test_api.py  test_config.py  test_llm.py  test_pipeline.py  test_repository.py  test_transcription.py
