[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recorder"
version = "2.0.0"
requires-python = ">=3.11"
description = "Enterprise voice recorder with AI analysis"
dependencies = [
    # Audio
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "webrtcvad>=2.0.10",
    "scipy>=1.12",
    # ASR
    "faster-whisper>=1.0.3",
    # Flask
    "flask>=3.0",
    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # LLM
    "requests>=2.31",
    # Logging
    "python-json-logger>=2.0",
    # Metrics (optional but listed)
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
noise = ["noisereduce>=3.0"]
keywords = ["yake>=0.4"]
diarization = ["pyannote-audio>=3.1"]
local-llm = ["llama-cpp-python>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
recorder = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.coverage.run]
source = ["recorder"]
omit = ["tests/*", "migrations/*"]
